WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286312
[libpas] Fix PGM metadata management across PGM hashtable resizes
https://bugs.webkit.org/show_bug.cgi?id=286312
Summary
[libpas] Fix PGM metadata management across PGM hashtable resizes
Dan Hecht
Reported
2025-01-21 11:39:13 PST
The metadata array should not store pointers to hashtable entries since the hash table can be reallocated and/or the entries rehashed.
Attachments
Add attachment
proposed patch, testcase, etc.
Dan Hecht
Comment 1
2025-01-21 11:39:14 PST
<
rdar://problem/143331296
>
Dan Hecht
Comment 2
2025-01-21 11:42:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39333
EWS
Comment 3
2025-01-22 02:28:28 PST
Committed
289233@main
(bad6963a608c): <
https://commits.webkit.org/289233@main
> Reviewed commits have been landed. Closing PR #39333 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug