[libpas] Fix PGM metadata management across PGM hashtable resizes https://bugs.webkit.org/show_bug.cgi?id=286312 rdar://143331296

Reviewed by Yusuke Suzuki.

If the PGM hashtable is resized, then the underlying entry array
can be reallocated, which invalidates any pointers into the old
entry array. Additionally, even if reallocated in place, the keys
will be rehashed and so they can move to a new entry.

So, the metadata array should not store pointers into the underlying
hashtable storage. Instead, store a copy of the key/value pointers
in the metadata array.

* Source/bmalloc/libpas/src/libpas/pas_probabilistic_guard_malloc_allocator.c:
(pas_probabilistic_guard_malloc_deallocate):
(pas_probabilistic_guard_malloc_get_metadata_array):
(pas_probabilistic_guard_malloc_initialize_pgm_as_enabled):
* Source/bmalloc/libpas/src/libpas/pas_probabilistic_guard_malloc_allocator.h:
* Source/bmalloc/libpas/src/test/PGMTests.cpp:
(std::testPGMMetaData):
(std::testPGMMetadataVectorManagement):
(std::testPGMMetadataVectorManagementFewDeallocations):
(std::testPGMMetadataDoubleFreeBehavior):
(std::testPGMMetadataVectorManagementRehash):
(addPGMTests):

Canonical link: https://commits.webkit.org/289233@main